--- a/css/hanabi.css
+++ b/css/hanabi.css
@@ -3,7 +3,7 @@
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-image: url(../img/back.png);
   background-repeat: no-repeat;
